tests/transpiler/x/zig/short_circuit.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/short_circuit.zig:10:62: error: ambiguous use of '&&'; use 'and' for logical AND, or change whitespace to ' & &' for bitwise AND
