tests/transpiler/x/zig/short_circuit.zig
// Generated by Mochi Zig transpiler on 2025-07-21 11:24 +0000
const std = @import("std");

fn boom(a: i64, b: i64) bool {
    try std.io.getStdOut().writer().print("{s}\n", .{"boom"});
    return true;
}

pub fn main() void {
    try std.io.getStdOut().writer().print("{any}\n", .{false && boom(1, 2)});
    try std.io.getStdOut().writer().print("{any}\n", .{true || boom(1, 2)});
}
